kubernetes/environments/staging/cluster-autoscaler-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-autoscaler
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: cluster-autoscaler
          image: registry.k8s.io/autoscaling/cluster-autoscaler:v1.29.2
          command:
            - ./cluster-autoscaler
            - --v=2
            - --stderrthreshold=info
            - --cloud-provider=aws
            - --skip-nodes-with-local-storage=false
            - --expander=least-waste
            - --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/ecommerce-platform-staging-eks
            - --balance-similar-node-groups
            - --scale-down-enabled=true
            - --scale-down-delay-after-add=15m
            - --scale-down-unneeded-time=15m
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 300m
              memory: 768Mi
